# practice-elements-of-programming

./: README.md  pyproject.toml
colab/: chapter_1.ipynb  chapter_13.ipynb  chapter_14.ipynb  chapter_16.ipynb  chapter_19.ipynb  chapter_6.ipynb  chapter_6_11.ipynb
