[tool.poetry]
name = "practice-elements-of-programming"
version = "0.1.0"
description = ""
authors = ["r-matsuzaka <matsuzakaryo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
